@@ -203,6 +203,7 @@ def test_suite():
         'test_roundtrip',
         'test_transportgit',
         'test_versionedfiles',
+        'test_workingtree',
         ]
     testmod_names = ['%s.%s' % (__name__, t) for t in testmod_names]
     suite.addTests(loader.loadTestsFromModuleNames(testmod_names))
